feat(functionality-implementation): implemented functionality for markup previewer

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,55 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+#preview {
+  @apply px-4;
+}
+#preview blockquote {
+  @apply border-l-2 border-gray-400 text-gray-300 pl-2 ml-10 m-1;
+}
+#preview > p > code {
+  @apply p-1;
+}
+#preview code {
+  @apply bg-white font-semibold text-xs;
+}
+#preview pre {
+  overflow: auto;
+  @apply block bg-white p-2 leading-6;
+}
+#preview h1 {
+  @apply border-b-2 border-slate-800 text-4xl font-semibold leading-10 my-4;
+}
+#preview h2 {
+  @apply border-b border-slate-800 text-2xl font-semibold  leading-8 my-2;
+}
+#preview table {
+  border-collapse: collapse;
+}
+#preview td,
+#preview th {
+  @apply border-2 border-slate-800 px-4;
+}
+#preview img {
+  @apply my-4 mx-auto block;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 420px) {
+  body {
+    @apply text-xs;
   }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+
+#preview ul {
+  @apply list-disc m-4 pl-4;
 }
 
-.card {
-  padding: 2em;
+#preview ol {
+  @apply m-4 block list-decimal;
+}
+#preview ol li {
+  display: list-item;
 }
 
-.read-the-docs {
-  color: #888;
+#preview p {
+  @apply my-2 text-slate-950;
 }
